<?xml version="1.0" encoding="utf-8"?>
<resources>
    
     <string name="app_name">董老板Excel助手</string>
    <string name="hello_world">董老板</string>
    <string name="action_settings">Settings</string>
    <string name="family_bill_name">销售帐务记录</string>
    <string name="top_name">随身记</string>
    <string name="search_box_name">请输入职位/公司名称</string>
    <string name="industry_name">行业类别</string>
    <string name="position_name">职位名称</string>
    <string name="salary_name">薪资要求</string>
    <string name="search_but">搜\t\t索</string>
    <string name="no_term">不限</string>
    <string name="salary">未说明</string>
    <string name="select_industry">选择行业</string>
     <string name="pull_to_refresh_release_label">松开后刷新</string> 
    <string name="pull_to_refresh_footer_release_label">松开加载更多数据</string>
   <string name="pull_to_refresh_refreshing_label">刷新\u2026</string> 
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string> 
    <string name="pull_to_refresh_footer_pull_label">上拉可以加载更多数据</string>
    <string name="attention_company">关注公司</string>
    <string name="shielded_company">屏蔽公司</string>
    <string name="company_detail">公司详情</string>
    <string name="scope">规模： </string>
    <string name="property">性质： </string>
    <string name="industry">行业： </string>
    <string name="contacts">联系人： </string>
    <string name="telephone">联系电话： </string>
    <string name="address">地址： </string>
    <string name="company_introduce">公司介绍 </string>
    <string name="all_job">查看该公司所有职位 </string>
    <string name="company_details">公司详情 </string>   
    <string name="job_detail"> 职位详情 </string>
    <string name="company_name">公司名称： </string>
    <string name="workplace">工作地址： </string>
    <string name="recruitment_conditions">招聘条件：</string>
    <string name="job_description">职位描述：</string>
   	<string name="contact_address">联系地址：</string>
    <string name="share">关注公司</string>
    <string name="cellect">收藏职位</string>
    <string name="applyfar">申请职位</string>
    <string name="r_time">具体时间：</string>
    <string name="detiles">详情</string>
    <string name="r_type">类\t\t\t型：</string>
    <string name="r_address">地\t\t\t址：</string>
    <string name="user_hint">你还没上传头像、点击图标上传</string>
    <string name="user_apply">我的申请</string>
    <string name="user_read_resume">谁看过我</string>
    <string name="user_attention">我的关注</string>
    <string name="user_black_list">黑名单</string>
    <string name="user_collection">我的收藏</string>
    <string name="resume_refresh">刷新</string>
    <string name="resume_preview">预览</string>
    <string name="resume_setting_text">设\t\t置</string>
    <string name="resume_update_text">编\t\t辑</string>
    <string name="resume_delete_text">删\t\t除</string>
    <string name="setting_binbing_text">手机认证</string>
    <string name="setting_message_text">消息设置</string>
    <string name="setting_revisepassword_text">修改密码</string>
    <string name="setting_about_text">关于我们</string>
    <string name="setting_versiondetected_text">版本检测</string>
    <string name="setting_num_text">13592534358</string>
    <string name="setting_loginout_text">退出登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密\t\t 码</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="login_in">登\t\t录</string>
    <string name="shake_setting">设\t置</string>
    <string name="register_id_card">身份证号</string>
    <string name="register_real_name">真实姓名</string>
    <string name="text_real_name">姓\t\t\t名</string>
    <string name="register_phone_number">手机号码</string>
    <string name="register_address">户口所在地</string>
    <string name="register_nation">民\t\t\t族</string>
    <string name="register_identifying_code">验证码</string>
    <string name="register_edit_id_card">请输入真实的身份证号码</string>
    <string name="register_edit_real_name">请输入真实姓名</string>
    <string name="register_edit_phone_number">请输入手机号码</string>
    <string name="register_edit_address">请选择户口所在地</string>
    <string name="register_edit_nation">请选择民族</string>
    <string name="register_edit_identifying_code">请输入验证码</string>
    <string name="register_hint">我已阅读过个人注册须知</string>
    <string name="register">完成注册</string>
    <string name="back_password_edit_phone_number">请输入注册时填写的手机号码</string>
    <string name="next">下一步</string>
    <string name="message_read_resume">谁看了我的简历</string>
    <string name="message_manager_letter">人事经理来信</string>
    <string name="recruitment">招聘会</string>
    <string name="message_recommended_daily">每日推荐</string>
    <string name="message_pay_companies">我关注的职位</string>
    <string name="get_identifyingde_text">获取验证码</string>
    <string name="resume_setting_text_bottom">设置简历状态</string>
    <string name="secrecy">保\t\t密</string>
    <string name="open">开\t\t放</string>
    <string name="cancel">取\t\t消</string>
    <string name="ok">确\t\t定</string>
    <string name="edit_personal_information">个人信息</string>
    <string name="edit_job_search_intention">求职意向</string>
    <string name="edit_education_experience">教育经历</string>
    <string name="edit_work_experience">工作经历</string>
    <string name="edit_skills_certificate">技能证书</string>
    <string name="text_incomplete">不完整</string>
    <string name="text_height">身\t\t\t高</string>
    <string name="text_sex">性\t\t\t别</string>
    <string name="text_date_of_birth">出生日期</string>
    <string name="text_political_affiliation">政治面貌</string>
    <string name="text_marital_status">婚姻状况</string>
    <string name="text_university">毕业院校</string>
    <string name="text_major">所学专业</string>
    <string name="text_graduation_time">毕业时间</string>
    <string name="text_degree_of_education">文化程度</string>
    <string name="text_address">居住所在地</string>
    <string name="edit_text_height">请输入您的身高</string>
    <string name="edit_text_political_affiliation">请选择政治面貌</string>
    <string name="edit_text_marital_status">请选择婚姻状况</string>
    <string name="edit_text_university">请输入毕业院校</string>
    <string name="edit_text_graduation_time">请选择毕业时间</string>
    <string name="edit_text_degree_of_education">请选择学历</string>
    <string name="pay">支出</string>
    <string name="Income">女</string>
    <string name="edit_text_address">请选择居住所在地</string>
    <string name="text_phone_number">手机号码</string>
    <string name="edit_text_phone_number">请输入联系电话</string>
    <string name="text_finish">完\t\t成</string>
    <string name="text_expect_job">期望职位</string>
    <string name="text_job_description">岗位描述</string>
    <string name="text_desired_salary">期望月薪</string>
    <string name="text_expected_area">期望工作区域</string>
    <string name="text_registration_category">登记类别</string>
    <string name="text_welfare_requirements">福利要求</string>
    <string name="text_accommodation_requirements">食宿要求</string>
    <string name="text_scope_of_information_release">信息发布范围</string>
    <string name="hint_expect_job">请选择期望职位</string>
    <string name="hint_job_description">请输入岗位描述</string>
    <string name="hint_desired_salary">请选择期望月薪</string>
    <string name="hint_expected_area">请选择期望工作区域</string>
    <string name="hint_registration_category">请选择登记类别</string>
    <string name="hint_welfare_requirements">请选择福利要求</string>
    <string name="hint_accommodation_requirements">请选择食宿要求</string>
    <string name="hint_scope_of_information_release">请选择信息发布范围</string>
    <string name="text_start_time">开始时间</string>
    <string name="text_end_time">毕业时间</string>
    <string name="text_ends_time">结束时间</string>
    <string name="text_education">学历</string>
    <string name="hint_start_time">请选择开始时间</string>
     <string name="hint_text_major">请选择专业</string>
    
    <string name="hint_end_time">请选择毕业时间</string>
    <string name="hint_ends_time">请选择结束时间</string>
    <string name="hint_education">请选择学历</string>
    <string name="text_company_name">公司名称</string>
    <string name="text_position">岗位</string>
    <string name="hint_position">请输入岗位名称</string>
    <string name="hint_company_name">请输入公司名称</string>
    <string name="text_certified_year">获证年份</string>
    <string name="text_certificate_name">证书名称</string>
    <string name="text_issuing_organs">发证机关</string>
    <string name="text_certificate_no">证书编号</string>
    <string name="text_level">技能等级</string>
    <string name="text_remarks">备注</string>
    <string name="hint_certified_year">请选择获证年份</string>
    <string name="hint_certificate_name">请输入证书名称</string>
    <string name="hint_issuing_organs">请输入发证机关</string>
    <string name="hint_certificate_no">请输入证书编号</string>
    <string name="hint_level">请输入技能等级</string>
    <string name="hint_remarks">请输入备注</string>
    <string name="toast_feifazifu">输入内容含有非法字符，请重新输入</string>
    <string name="toast_username">请输入用户名</string>
    <string name="toast_password">请输入密码</string>
    <string name="toast_network">请检查您的网络</string>
    <string name="toast_network_null">无法连接到服务器，请稍候重试</string>
    <string name="r_text_address">地址</string>
    <string name="r_text_bus">公交路线</string>
    <string name="r_text_date">招聘会日期</string>
    <string name="r_text_type">招聘会类型</string>
    <string name="r_text_company">承办单位</string>
    <string name="r_text_theme">招聘会主题</string>
    <string name="r_but_companys">查看参会单位</string>
    <string name="industry_address">公司地址</string>
	<string name="shield_company">我的黑名单</string>
	<string name="shield_cancle">删除</string>
	<string name="resume_expect_job">期望职位：</string>
    <string name="resmue_desired_salary">期望月薪：</string>
     <string name="resume_expected_area">期望工作区域：</string>
      <string name="resume_accommodation_requirements">食宿要求：</string>
       <string name="resume_welfare_requirements">福利要求：</string>
     <string name="feedback">意见反馈</string>
	<string name="hint_feedback_theme">请输入意见主题</string>
    <string name="hint_feedback_context">有什么想说的，尽快咆哮吧</string>
    <string name="aboutus">关于我们</string>
    <string name="new_password">新\t密\t码</string>
    <string name="old_password">旧\t密\t码</string>
    <string name="ensure_password">确认密码</string>
    <string name="submit">提交</string>
    <string name="edit_old_password">请输入旧密码</string>
    <string name="edit_new_password">请输入新密码</string>
    <string name="edit_ensure_password">请输入确认密码</string>
    <string name="service_telephone">服务电话</string>
    <string name="official_website">官方网站</string>
    <string name="sponsor">主办方</string>
    <string name="shakeresult">摇到的职位</string>
    <string name="immediate_experience">立即体验</string>
    <string name="hiti_resume_setting">简历设置失败</string>
    <string name="hiti_resume_delect">简历删除失败</string>
    <string name="top_text_title">扫一扫</string>
    <string name="captrue_result">扫描结果</string>
    <string name="text_collection">收\t\t藏</string>
    <string name="text_record">记\t录</string>
    <string name="capture_record">扫描记录</string>
    <string name="about_us">开封市人力资源网是由开封市职业介绍服务中心创建的，为我市市民提供求职登记、就业指导、收集和发布人力资源供求信息等多项服务，努力为用人单位和求职者提供专业、便捷的人力资源服务，搭建一个可以轻松找到满意人才和称心工作的平台，为我市经济社会又好又快发展提供强有力地人力资源保障和人才支撑。目前开封市人力资源网对用人单位提供招聘服务，企业只需要提供合法有效的资质证件，就可以参加开封市人力资源网每周一至周五举办的现场招聘会。详情可以拨打开封市人力资源网的电话进行咨询，电话号码是0371-23883369。</string> 
    <string name="text_service_telephone">0371-23883369</string>
    <string name="text_official_website">http://www.kfrsrcw.com</string>
    <string name="text_sponsor">开封市人力资源和社会保障局</string>
    <string name="no_jobs_details">该公司很懒，没留下任何相关信息，请返回继续~</string>
    <string name="no_resume">您还没有简历，点击下一步去创建自己的简历~</string>
    <string name="no_result">很抱歉没有获取到您想要的结果，请返回更改搜索条件重试一下~</string>
    <string name="register_notice_top">个人注册须知</string>
  <string name="shake_hint_zhiwei">请选择职位名称</string> 
   <string name="shake_hint_fanwei">请选择距离范围</string>
    <string name="shake_hint_xinzi">请选择薪资范围</string>    
     <string name="shake_zhiwei">职位设置</string> 
   <string name="shake_fanwei">距离范围</string>
    <string name="shake_xinzi">薪资范围</string>
    <string name="loading">努力加载中,请稍候~</string>
    
   
</resources>
