<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/white_bg">
    
    <ImageView 
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background ="@drawable/ic_launcher"
        android:id="@+id/img_first"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
      <LinearLayout
        android:id="@+id/linear_username"
       android:layout_width="fill_parent"
       android:layout_height="50dp"
       android:orientation="horizontal"
       android:layout_below="@+id/img_first"
       android:layout_marginTop="30dp">
       <RelativeLayout 
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:background="@drawable/login_input_top">
           <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textColor="@color/grey"
             android:text="@string/user_name"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:layout_marginLeft="10dp"/>
       </RelativeLayout>
       <EditText
           android:id="@+id/edit_username"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:ems="10"
           android:inputType="textPersonName" 
           android:background="@drawable/login_input_end"
           android:hint="@string/hint_user_name"
           android:textSize="16sp">
       </EditText>
   </LinearLayout>
      <LinearLayout 
       android:id="@+id/linear_password"
       android:layout_width="fill_parent"
       android:layout_height="50dp"
       android:layout_below="@+id/linear_username"
       android:orientation="horizontal">
       <RelativeLayout 
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:background="@drawable/login_input_top">
           <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textColor="@color/grey"
             android:text="@string/password"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:layout_marginLeft="10dp"/>
       </RelativeLayout>

       <EditText
           android:id="@+id/edit_password"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:ems="10"
           android:inputType="textPassword" 
           android:background="@drawable/login_input_end"
           android:hint="@string/hint_password"
           android:textSize="16sp">
       </EditText>
   </LinearLayout>
    <RelativeLayout 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/linear_password"
           android:id="@+id/relative_btn"
           android:layout_marginTop="50dp">
            <Button 
	         android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@drawable/button_submit"
             android:text="@string/login_in"
             android:textColor="@color/white"
             android:id="@+id/login_button"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:textSize="17sp" 
             android:textStyle="bold"/>          
  </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="没有账号？"
            android:visibility="gone"
            android:textColor="@color/grey"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/bottom_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
            android:background="@drawable/button_submit_white"
            android:text="百度一下"
            android:textColor="@color/grey"
            android:textSize="18.0sp" />
    </RelativeLayout>

</RelativeLayout>